2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* sys/dshowdecwrapper/gstdshowaudiodec.c:
	(gst_dshowaudiodec_dispose):
	* sys/dshowdecwrapper/gstdshowvideodec.c:
	(gst_dshowvideodec_dispose):
	Chain up dispose methods properly. Fixes bug #515970.

2008-02-12  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/mpegvideoparse/mpegvideoparse.c:
	(mpegvideoparse_handle_sequence), (mpegvideoparse_drain_avail),
	(gst_mpegvideoparse_change_state):
	Fix leaking caps.
	Fix potential buffer leak in forward mode.
	Cleanup queues when going to READY. Fixes #515815.

2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* docs/plugins/gst-plugins-bad-plugins-docs.sgml:
	* docs/plugins/gst-plugins-bad-plugins-sections.txt:
	* docs/plugins/inspect/plugin-gio.xml:
	Remove documentation for the GIO plugin as it was moved to
	gst-plugins-base. Fixes bug #515964.

2008-02-12  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/xvid/gstxvidenc.c:
	* gst/vmnc/vmncdec.c:
	* sys/glsink/glimagesink.c:
	* sys/glsink/gstgldisplay.c:
	Fix some finalize leaks by chaining up to the parent method.
	Fixes: #515919

2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/elements/souphttpsrc.c:
	Include glib/gprintf.h for g_vasprintf(). Fixes bug #515564.

2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/librfb/gstrfbsrc.c: (gst_rfb_src_dispose):
	Free the rfb decoder on finalize. Fixes bug #515721.

2008-02-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* sys/fbdev/gstfbdevsink.c: (gst_fbdevsink_class_init),
	(gst_fbdevsink_finalize):
	Free the device string in finalize. Fixes bug #515722.

2008-02-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/xvid/gstxvidenc.c: (gst_xvidenc_init):
	Unset GValues after using them. Fixes bug #515720.

2008-02-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/Makefile.am:
	Disable the dvb plugin for the states test. Fixes bug #515567.

2008-02-10  Edgard Lima,,,,  <edgard.lima@indt.org.br>
